@@ -74,15 +74,9 @@ Clip-path syntax
 Individual Drawing Primitives
 =============================
 
-"affine is just a compact way to represent a 3x3 translation matrix.
-Locations 0 & 3 are scaling for x,y; 1 & 2 are rotation for x,y; 4 & 5
-are translation. Affine is equivalent to the SVG matrix command."
-
-affine scaleX,rotationX,rotationY,scaleY,translationX,translationY
-"arcs follow the SVG specification for the A command for the PATH
- primitive."
-arc rx ry x-axis-rotation arge-arc-flag sweep-flag x y
-bezier x1,y1, x2,y2, x3,y3, ..., xN,yN
+affine sx,rx,ry,sy,tx,ty
+arc x0,y0 x1,y1 a0,a1
+bezier x0,y0  ...  xn,yn
 circle originX,originY perimX,perimY
 clip-path url(#%s)  (%s is the name of the clip path)
 clip-rule (evenodd|nonzero)
@@ -145,5 +139,5 @@ stroke-width linewidth
 text x,y "some text"
 text-antialias (0|1)
 translate x,y
-viewbox x1,y1 x1,y2 (e.g. "viewbox 0 0 640 480")
+viewbox x1 y1 x1 y2 (e.g. "viewbox 0 0 640 480")
 
