@@ -1,3 +1,9 @@
+2002-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * configure.ac (libtool_build_static_libs): Added
+    --enable-delegate-build option to suuport building ImageMagick
+    using delegate libraries in subdirectories of the ImageMagick
+    source directory.
+
 2002-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * WMF now supplies bitmaps as inline images rather than via
     a mpri reference.
